# fabric-patterns-to-llm-templates

./: .gitignore  README.md  main.py  pyproject.toml
